Time slots and legend, spacing bottom on mobile fixes

--- a/src/component-library/consultant-finder/CantFind/CantFind.module.scss
+++ b/src/component-library/consultant-finder/CantFind/CantFind.module.scss
@@ -5,7 +5,7 @@
   @include responsive-container;
 
   margin-top: $spacing-2;
-  margin-bottom: $spacing-10;
+  margin-bottom: px-to-rem(100);
 
   @include media(screen-l) {
     max-width: px-to-rem(800);
